--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
       h1 {
         font-family: sans-serif;
-        font-size: 40px;
+        font-size: 35px;
         line-height: 1.3;
         width: 100%;
         padding: 30px;
@@ -26,6 +26,8 @@
     </style>
   </head>
   <body>
-    <h1>I am sorry but you are not eligible for completing the study. <p>You either disagreed on a consent form or failed attention check questions.</p></h1>
+    <h1>I'm sorry, but you are not eligible to complete the study.
+      <p>This could be because you either disagreed with the consent form or did not answer the attention check questions correctly.</p>
+    <p>You can contact <b>researchsurvey999@gmail.com</b> if you have any questions.</p></h1>
   </body>
 </html>
